# music-with-brylie

./: .gitignore  LICENSE  LICENSE-content.md  README.md  dprint.json  lefthook.yml  manim_imports_ext.py  mise.toml  pyproject.toml
_2026/fundamentals/: main.py
custom/: audio_mobjects.py
docs/: README.md
src/_2026/: __init__.py
src/_2026/fundamentals/: __init__.py  main.py
src/utils/: __init__.py  audio_mobjects.py  common_scenes.py
tests/: __init__.py  test_audio_mobjects.py
