[project]
name = "music-with-brylie"
version = "0.1.0"
description = "Educational resources about music."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "manim>=0.19.1",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/_2026"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
